new.html.erb / show.html.erb

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,4 @@
-<h1>メッセージ新規追加ページ</h1>
+<h1>タスク新規追加ページ</h1>
 
 <%= form_with(model: @task) do |f| %>
     <%= f.label :content,"タスク"%>
@@ -6,4 +6,4 @@
 
     <%= f.submit "登録" %>
 <% end %>
-<% link_to "一覧に戻る" , tasks_path %>
+<%= link_to "一覧に戻る" , tasks_path %>
