--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,9 +1,4 @@
 <h1>タスク新規追加ページ</h1>
 
-<%= form_with(model: @task) do |f| %>
-    <%= f.label :content,"タスク"%>
-    <%= f.text_field :content %>
-
-    <%= f.submit "登録" %>
-<% end %>
+<%= render "form" , task: @task %>
 <%= link_to "一覧に戻る" , tasks_path %>
